Bug 188134 - Absolute links prevent forward proxies
Summary: Absolute links prevent forward proxies
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 188210 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-03-26 06:09 UTC by Arthur Pemberton
Modified: 2009-03-27 12:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arthur Pemberton 2009-03-26 06:09:48 UTC
Version:            (using KDE 4.2.1)
OS:                Linux
Installed from:    Fedora RPMs

Description of problem:
Can't forward proxy KTorrent site from a sub-folder path because login form
posts to /login

How reproducible:
100%

Steps to Reproduce:
1. Enable Ktorrent Web Interface
2. Setup proxy to http://ktorrenthost:port/ from http://accessible.tld/foobar/
3. Browse to http://accessible.tld/foobar/
4. Attempt to log in

Actual results:
Form posts to /login, login fails.

Expected results:
Form posts to login and login succeeds.

Additional info:
Either using relative URLs through out or allowing the user to choose a path
will work.
Comment 1 Joris Guisson 2009-03-27 08:58:42 UTC
*** Bug 188210 has been marked as a duplicate of this bug. ***
Comment 2 Joris Guisson 2009-03-27 12:54:09 UTC
SVN commit 945370 by guisson:

- Use relative URL's in webinterface 
- Don't send body of login page when redirecting to login page 

BUG: 188134
BUG: 188209



 M  +2 -0      ChangeLog  
 M  +7 -10     plugins/webinterface/httpserver.cpp  
 M  +12 -12    plugins/webinterface/www/coldmilk/coldmilk.html  
 M  +1 -1      plugins/webinterface/www/coldmilk/login.html  
 M  +11 -11    plugins/webinterface/www/coldmilk/page_update.js  
 M  +1 -1      plugins/webinterface/www/common/login.js  
 M  +2 -2      plugins/webinterface/www/common/settings.js  
 M  +5 -5      plugins/webinterface/www/common/torrent_details.js  
 M  +4 -4      plugins/webinterface/www/common/torrent_list.js  
 M  +11 -11    plugins/webinterface/www/default/interface.html  
 M  +3 -3      plugins/webinterface/www/default/interface.js  
 M  +1 -1      plugins/webinterface/www/default/login.html  
 M  +2 -2      plugins/webinterface/www/mobile/interface.html  
 M  +1 -1      plugins/webinterface/www/mobile/login.html  
 M  +5 -5      plugins/webinterface/www/mobile/mobile.js  


WebSVN link: http://websvn.kde.org/?view=rev&revision=945370