- Use relative URL's in webinterface - Don't send body of login page when redirecting to login page

BUG: 188134
BUG: 188209


svn path=/trunk/extragear/network/ktorrent/; revision=945370